Fixed alignment of thumbs up toastr

--- a/src/styles/components/_toast.scss
+++ b/src/styles/components/_toast.scss
@@ -56,8 +56,12 @@ body {
       background-color: var(--neeto-ui-warning-toastr-bg-color);
     }
 
-    .Toastify__toast,
-    .neeto-ui-toastr {
+   &.Toastify__toast-container--bottom-left{
+      bottom: 12px !important;
+      left: 12px !important;
+    }
+
+    .Toastify__toast{
       min-height: var(--neeto-ui-toastr-min-height);
       padding: var(--neeto-ui-toastr-padding-y) var(--neeto-ui-toastr-padding-x);
       margin: var(--neeto-ui-toastr-margin-y) var(--neeto-ui-toastr-margin-x);
@@ -68,9 +72,7 @@ body {
       "Ubuntu", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
 
       @include viewport(xs-mob) {
-        width: 95%;
-        margin-left: auto;
-        margin-right: auto;
+        max-width: calc(100% - 24px);
       }
 
       &::after {
